fix nav align error

--- a/client/src/components/nav/topnav.less
+++ b/client/src/components/nav/topnav.less
@@ -1,4 +1,5 @@
 .banner{
+    min-width: 950px;
     height: 28px;
     line-height: 28px;
     background-color:#848682;
